[package]
name = "server_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.10.2" }
actix = "0.13.5"
actix-ws = { version = "0.3.0" }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
bytestring = "1.4.0"
env_logger = "0.11.7"
tokio = "1.44.1"